<resources>
    <string name="app_name">TIRefApp</string>
    <string name="refIntro">Which referee are you?</string>
    <string name="red1">Red Referee\n1</string>
    <string name="red2">Red Referee\n2</string>
    <string name="blue1">Blue Referee\n1</string>
    <string name="blue2">Blue Referee\n2</string>
    <string name="gameTime">Game Time: 0:00</string>
    <string name="anchors">Anchors: 0/2</string>
    <string name="gameState">Autonomous</string>
    <string name="addCargo">Add\nCargo</string>
    <string name="removeCargo">Remove\nCargo</string>
    <string name="cannon">Cannon</string>
    <string name="rp">RP</string>
    <string name="penalties">Penalties</string>
    <string name="disable">Disable\nRobot</string>
    <string name="refId">Referee: Red 1</string>
    <string name="addCargoText">Select a cargo to add:</string>
    <string name="removeCargoText">Select a cargo to remove:</string>
    <string name="barrel">Barrel</string>
    <string name="allianceCargo">Alliance Cargo</string>
    <string name="box">Box</string>
    <string name="crate">Crate</string>
    <string name="treasure">Treasure</string>
    <string name="rpText">Select the RP type:</string>
    <string name="autoRP">Autonomous\nRP</string>
    <string name="cannonRP">Cannon\nRP</string>
    <string name="penaltyText">Select a penalty type:</string>
    <string name="penalty">Penalty</string>
    <string name="foul">Foul</string>
    <string name="disableText">Select a robot to disable:</string>
    <string name="redRobot1">Red Robot\n1</string>
    <string name="redRobot2">Red Robot\n2</string>
    <string name="blueRobot1">Blue Robot\n1</string>
    <string name="blueRobot2">Blue Robot\n2</string>
    <string name="newStack">New\nStack</string>
    <string name="deleteStack">Delete\nStack</string>
    <string name="endPostRun">End Post Run</string>
    <string name="stackerText">Select a cargo to stack:</string>
    <string name="endStack">Stop Stacking</string>
    <string name="stackDisplay">Current Stack:\n</string>
    <string name="deleteStackText">Select a stack to delete:</string>
    <string name="displayStack">Display\nStack</string>
    <string name="endDelete">Stop\nDeleting</string>
    <string name="selectedStack">Selected Stack:\n</string>
    <string name="endGame">Confirm</string>
    <string name="recapText">
        You were in charge of robot Red 1.\n
        Your robot scored 0 points during the game.\n
        Your robot stacked stacks worth 0 points.\n
        Your robot preformed 0 points of penalties\n that will be awarded to the opposing alliance.\n
        Your alliance earned 0 RPs.\n
        Show this to the head referee and confirm.
    </string>
</resources>
