<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/gameTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="140dp"
        android:text="@string/gameTime"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/anchors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/anchors"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="28dp"
        android:text="@string/gameState"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addCargo"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="120dp"
        android:text="@string/addCargo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTime" />

    <Button
        android:id="@+id/cannon"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:text="@string/cannon"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCargo" />

    <Button
        android:id="@+id/penalties"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:text="@string/penalties"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cannon" />

    <Button
        android:id="@+id/enableDisable"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:text="@string/enableDisable"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rankingPoints" />

    <Button
        android:id="@+id/rankingPoints"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:text="@string/rp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCargo" />

    <Button
        android:id="@+id/removeCargo"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="52dp"
        android:text="@string/removeCargo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTime" />

    <TextView
        android:id="@+id/refId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/refId" />
</androidx.constraintlayout.widget.ConstraintLayout>