<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemoveCargoActivity">

    <TextView
        android:id="@+id/addCargoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="105dp"
        android:text="@string/removeCargoText"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addBarrel"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="86dp"
        android:onClick="removeCargo"
        android:text="@string/barrel"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCargoText" />

    <Button
        android:id="@+id/addAllianceCargo"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="86dp"
        android:onClick="removeAllianceCargo"
        android:text="@string/allianceCargo"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBarrel" />

    <Button
        android:id="@+id/addBox"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="86dp"
        android:onClick="removeBox"
        android:text="@string/box"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAllianceCargo" />

    <Button
        android:id="@+id/addCrate"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="86dp"
        android:onClick="removeCrate"
        android:text="@string/crate"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBox" />

    <Button
        android:id="@+id/addTreasure"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="86dp"
        android:onClick="removeTreasure"
        android:text="@string/treasure"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCrate" />

</androidx.constraintlayout.widget.ConstraintLayout>