<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCargoActivity">

    <TextView
        android:id="@+id/removeCargoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="120dp"
        android:text="@string/addCargoText"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeBarrel"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="86dp"
        android:onClick="addBarrel"
        android:text="@string/barrel"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeCargoText" />

    <Button
        android:id="@+id/removeAllianceCargo"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="86dp"
        android:onClick="addAllianceCargo"
        android:text="@string/allianceCargo"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeBarrel" />

    <Button
        android:id="@+id/removeBox"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="86dp"
        android:onClick="addBox"
        android:text="@string/box"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeAllianceCargo" />

    <Button
        android:id="@+id/removeCrate"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="86dp"
        android:onClick="addCrate"
        android:text="@string/crate"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeBox" />

    <Button
        android:id="@+id/removeTreasure"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="86dp"
        android:onClick="addTreasure"
        android:text="@string/treasure"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeCrate" />
</androidx.constraintlayout.widget.ConstraintLayout>