<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpeningActivity">

    <TextView
        android:id="@+id/refIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="sans-serif"
        android:text="@string/refIntro"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/red1"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="51dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="chooseRef"
        android:text="@string/red1"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:tag="red1"
        app:layout_constraintEnd_toStartOf="@+id/blue1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refIntro" />

    <Button
        android:id="@+id/red2"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="73dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/red2"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:tag="red2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red1" />

    <Button
        android:id="@+id/blue1"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="52dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/blue1"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:tag="blue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refIntro" />

    <Button
        android:id="@+id/blue2"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="52dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/blue2"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:tag="blue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue1" />

</androidx.constraintlayout.widget.ConstraintLayout>