<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteStackActivity">

    <Button
        android:id="@+id/displayStack"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="52dp"
        android:onClick="displayStack"
        android:text="@string/displayStack"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stackChooser" />

    <Button
        android:id="@+id/deleteStackButton"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="52dp"
        android:onClick="removeStack"
        android:text="@string/deleteStack"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayStack" />

    <Button
        android:id="@+id/endDelete"
        android:layout_width="128dp"
        android:layout_height="95dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:onClick="finishDelete"
        android:text="@string/endDelete"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayStack" />

    <TextView
        android:id="@+id/selectedStack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:text="@string/selectedStack"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteStackText" />

    <TextView
        android:id="@+id/deleteStackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="45dp"
        android:text="@string/deleteStackText"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stackChooser"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="91dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteStackText" />

</androidx.constraintlayout.widget.ConstraintLayout>